[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/garbagebag.png" type="Texture" id=1]
[ext_resource path="res://Scripts/GarbageBag.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
height = 8.0

[node name="GarbageBag" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.5, 2.5 )
scale = Vector2( 1.15, 1.35 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0, -21 )

[node name="AttackRate" type="Timer" parent="."]
wait_time = 0.1

[node name="LifeTimer" type="Timer" parent="."]
wait_time = 15.0
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="AttackRate" to="." method="_on_AttackRate_timeout"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_LifeTimer_timeout"]
